# ScoreGen

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ScoreGen.sln  commitlint.config.js  forge.config.js  lilypond_paths.h.in  output.xml  package-lock.json  package.json  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: lect.md  sup_meet.md  ta_meet.md  team_meet.md
.github/workflows/: commitlint.yml  default.yml  latex.yml  lint.yml  run-tests.yml
ScoreGen.Tests/: CMakeLists.txt  DetermineBPM.Test.cpp  STFT.Test.cpp  ScoreGen.Tests.vcxproj  channelConverter.Test.cpp  findKey.Test.cpp  generateMusicXML.Test.cpp  hammingFunc.Test.cpp  hanningFunc.Test.cpp  helpers.Test.cpp  sndFIleHandler.Test.cpp
ScoreGen.Tests/test-helpers/: test-helpers.h
ScoreGen.Tests/tests/: DetermineBPM.Test.cpp  ScoreGen.Tests.cpp
docs/: Common.tex  Makefile  README.md  SRS_Reflection.tex
docs/Design/: README.md
docs/Design/SoftArchitecture/: MG.tex
docs/Design/SoftDetailedDes/: MIS.tex
docs/DevelopmentPlan/: DevelopmentPlan.tex  README.md
docs/GenderMag/: GenderMag.tex
docs/HazardAnalysis/: HazardAnalysis.tex  README.md
docs/LiteratureReview/: LiteratureReview.tex
docs/Presentations/: README.md
docs/ProblemStatementAndGoals/: ProblemStatement.tex  README.md
docs/ReflectAndTrace/: README.md
docs/Reflection/: Reflection.tex
docs/ResearchReport/: Research_Report.tex
docs/SRS/: SRS.tex  references.bib
docs/SRS-Volere/: SRS.tex  references.bib
docs/SRS-Volere/images/: BUC-revised.drawio  SRS-contex-diagram-revised.drawio
docs/SRS/images/: SRS-data-model.drawio  SRS-manual-score-process-revised.drawio
docs/UserGuide/: README.md
docs/VnVPlan/: README.md  VnVPlan.tex
docs/VnVReport/: README.md  VnVReport.tex
docs/projMngmnt/: Final_Team_Contrib.tex  POC_Team_Contrib.tex  Rev0_Team_Contrib.tex
include/: STFT.h  audioProcessor.h  channelConverter.h  common.h  detectNoteDuration.h  detectPitch.h  detect_pitch.h  determineBPM.h  dsp.h  dsp2.h  findKey.h  generateMusicXML.h  hammingFunction.h  hanningFunction.h  note_duration_extractor.h  postprocess.h  processJson.h  readWav.h  recordAudio.h  sndFileHandler.h  xmlToPDF.h
libs/libmusicxml/include/: libmusicxml.h
libs/libmusicxml/lib/: liblibmusicxml.3.2.2.dylib  liblibmusicxml.3.dylib  liblibmusicxml.dylib
libs/libmusicxml/lib/win64/: libmusicxml.lib
libs/libmusicxml/windows/lib/: libmusicxml.lib
libs/lilypond/lilypond-2.24.4/lib/lilypond/2.24.4/ccache/lily/: accreg.go  auto-beam.go  autochange.go  backend-library.go  bar-line.go  breath.go  c++.go  chord-entry.go  chord-ignatzek-names.go  chord-name.go  clip-region.go  color.go  curried-definitions.go  define-context-properties.go  define-event-classes.go  define-grob-interfaces.go  define-grob-properties.go  define-grobs.go  define-markup-commands.go  define-music-callbacks.go  define-music-display-methods.go  define-music-properties.go  define-music-types.go  define-note-names.go  define-stencil-commands.go  define-woodwind-diagrams.go  display-lily.go  display-woodwind-diagrams.go  file-cache.go  flag-styles.go  font-encodings.go  font.go  framework-cairo.go  framework-ps.go  framework-svg.go  fret-diagrams.go  graphviz.go  harp-pedals.go  layout-beam.go  layout-slur.go  (+32 more)
refs/: README.md  References.bib
scripts/: cleanBuild.sh  installDependencies.sh  run.sh
src/: README.md  STFT.cpp  ScoreGen.cpp  ScoreGen.vcxproj  channelConverter.cpp  detectNoteDuration.cpp  detectNoteDuration.h  detectPitch.cpp  detect_pitch.cpp  dsp.cpp  findKey.cpp  generateMusicXML.cpp  hammingFunction.cpp  packages.config  processJson.cpp  recordAudio.cpp  sndFileHandler.cpp
src/backend/: ScoreGen.cpp  detectNoteDuration.cpp  determineBPM.cpp  dsp.cpp  dsp2.cpp  findKey.cpp  generateMusicXML.cpp  hammingFunction.cpp  hanningFunction.cpp  note_duration_extractor.cpp  postprocess.cpp  readWav.cpp  xmlToPDF.cpp
src/frontend/: .gitignore  binding.gyp  commands.js  frequency.js  index.html  main.js  nav.js  package.json  preload.js  record.html  record.js  renderer.js  sheet-music.html  sheet-music.js  styles.css  upload.html
src/frontend/src/: addon.cpp  hello.cpp  hello.h  main.js
src/python-scripts/: midi_generation.py
test/TestingDatasets/sample-formats/: empty.docx  empty.xlsx
test/gtest/: hammingFunc.Test.cpp  hanningFunc.Test.cpp  sndFIleHandler.Test.cpp
test/gtest/test-helpers/: test-helpers.cpp  test-helpers.h
